--- a/WebAplication/Master.Master
+++ b/WebAplication/Master.Master
@@ -104,7 +104,7 @@
                         <ul class="submenu">
                             <li><a href="Pedidos.aspx" class="">Pedidos</a></li>
                             <li><a href="#" class="">Ventas</a></li>
-                            <li><a href="#" class="">Clientes</a></li>
+                            <li><a href="Clientes.aspx" class="">Clientes</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Empleados</a></li>
