--- a/WebAplication/Master.Master
+++ b/WebAplication/Master.Master
@@ -102,7 +102,12 @@
                             <li><a href="Productos.aspx" class="">Productos</a></li>
                             <li><a href="Marcas.aspx" class="">Marcas</a></li>
                             <li><a href="Categorias.aspx" class="">Categorias</a></li>
-                            <li><a href="Formulas.aspx" class="">Formulas</a></li>
+                              </ul>
+                    </li>
+                    <li><a href="#">Formulas</a>
+                        <ul class="submenu">
+                             <li><a href="AltaFormula.aspx" class="">Agregar Formula</a></li>
+                            <li><a href="Formulas.aspx" class="">Listar Formulas </a></li>
                         </ul>
                     </li>
                     <li><a href="#">Ventas</a>
